# OpenglTest

./: CMakeLists.txt  RunConfigure.sh  build.sh  configure.sh  configureNoWarnings.sh  run.sh
CMake/: ProjectSettings.cmake  ProjectWarnings.cmake
buildScripts/: build.sh  configConfigure.sh  configure.sh  run.sh
notes/: Opengl.md  TakeNotesHere.md
src/: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Common.hpp  MockClass.cpp  MockClass.hpp
src/Core/Assets/: basic_vert.glsl
src/Core/Core/: BackTracer.hpp  Common.hpp  Log.cpp  Log.hpp  LogMsg.cpp  LogMsg.hpp  Logger.cpp  Logger.hpp  os.cpp  os.hpp
src/Core/Core/Details/: ConsoleMutex.hpp  FmtHelper.hpp  NullMutex.hpp
src/Core/Core/Formatter/: Formatter.hpp  PatternFormatter.cpp  PatternFormatter.hpp
src/Core/Core/Sinks/: Sinks.cpp  Sinks.hpp  StdoutSink.cpp  StdoutSink.hpp
src/Core/Extra/: SceneInterface.hpp  SceneRunner.hpp
src/Core/Render/: Scene.cpp  Scene.hpp
src/Core/Window/: Window.cpp  Window.hpp
